doc: added swagger for login
